Add ui options to enable mercure_debugging_tool

--- a/templates/app/index.html.twig
+++ b/templates/app/index.html.twig
@@ -16,5 +16,8 @@
         <li>Your controller at <code><a href="{{ '/home/kali/dev/mercure/app/src/Controller/AppController.php'|file_link(0) }}">src/Controller/AppController.php</a></code></li>
         <li>Your template at <code><a href="{{ '/home/kali/dev/mercure/app/templates/app/index.html.twig'|file_link(0) }}">templates/app/index.html.twig</a></code></li>
     </ul>
+    <div>
+        <button class="js-push-update">Push Update</button>
+    </div>
 </div>
 {% endblock %}
